fixed the animation z-index

--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ header {
     color: white;
     text-align: center;
     border-radius: 50px;
-    position: sticky;
     
 }
 
@@ -24,6 +23,7 @@ h1 {
     text-align: left;
     padding: 30px;
     color: lightgray;
+    z-index: 1;
 }
 
 
@@ -31,19 +31,28 @@ h1 {
 
     float: left;
     margin-right: 20px;
+    z-index: 1000;
+    position: relative;
+}
+p{
+
+z-index: 1000;
+position: relative;
 }
 
-body, html {
-    background-color: #000;
-    color: #fff;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+body,
+html {
+  background-color: #000;
+  color: #fff;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  
 }
 canvas {
-    position:absolute;
-    top:0;
-    left:0
+  position: absolute;
+  top: 0;
+  left: 0;
 }
